--- a/index.html
+++ b/index.html
@@ -5,40 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <script src="script.js" defer></script>
+    <!-- <script src="script.js" defer></script> -->
     <!-- <script>
       import function1 form './..';
       function1('hostElement')
     </script> -->
     <link rel="stylesheet" href="style.css" />
-    <style>
-      * {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-      }
-      .container {
-        height: 300px;
-        border: 2px solid black;
-      }
-    </style>
   </head>
   <body>
-    <nav>
-      <button id="button1">Add another editable block</button>
-      <button id="button2">save content</button>
-    </nav>
-    <div
-      class="container"
-      id="container"
-      contenteditable="true"
-      spellcheck="false"
-    ></div>
-    <br />
     <div id="lion-editor">
       <script type="module">
-        import { sayHi } from "./test.js";
-        sayHi("lion-editor");
+        import { createEditor } from "./create-editor.js";
+        createEditor("lion-editor");
       </script>
     </div>
   </body>
