--- a/index.html
+++ b/index.html
@@ -5,19 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <!-- <script src="script.js" defer></script> -->
-    <!-- <script>
-      import function1 form './..';
-      function1('hostElement')
-    </script> -->
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div id="lion-editor">
-      <script type="module">
-        import { createEditor } from "./create-editor.js";
-        createEditor("lion-editor");
-      </script>
+    <div style="width: 90vw; height: 800px; margin: 0 auto">
+      <h1>This is a Editor Test!</h1>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet,
+        tempora officia
+      </p>
+      <br />
+      <div id="lion-editor">
+        <script type="module">
+          import { createEditor } from "./utils/create-editor.js";
+          createEditor("lion-editor");
+        </script>
+      </div>
     </div>
   </body>
 </html>
