Obeject Programing Style with typescript

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <br />
       <div id="lion-editor">
         <script type="module">
-          import { createEditor } from "./utils/create-editor.js";
+          import { createEditor } from "./dist/app.js";
           createEditor("lion-editor");
         </script>
       </div>
