--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="style.css" />
+    <script type="module" src="dist/bundle.js"></script>
   </head>
   <body>
     <div style="width: 90vw; height: 800px; margin: 0 auto">
@@ -17,7 +18,6 @@
       <br />
       <div id="lion-editor">
         <script type="module">
-          import { createEditor } from "./dist/app.js";
           createEditor("lion-editor");
         </script>
       </div>
