增加插入列表和鑲嵌功能

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Lion Editor Test</title>
     <link rel="stylesheet" href="style.css" />
     <script type="module" src="dist/bundle.js"></script>
   </head>
@@ -15,6 +15,8 @@
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet,
         tempora officia
       </p>
+      <h3>Testing</h3>
+      <h3>Testing end</h3>
       <br />
       <div id="lion-editor">
         <script type="module">
@@ -22,5 +24,6 @@
         </script>
       </div>
     </div>
+    <div></div>
   </body>
 </html>
